[#116083] Fixed bugs and tests.