@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -24,6 +23,8 @@ import nu.ndw.nls.routingmapmatcher.isochrone.v2.exploration.ExploreLimit;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -51,37 +52,31 @@ class AbstractDijkstraIsochroneAlgorithmTest {
     @Mock
     private ExploreLimit<IsochroneLabel> exploreLimit;
 
-    private TestAlgorithm algorithm;
-
     @BeforeEach
     void setUp() {
         when(graph.getNodeAccess()).thenReturn(nodeAccess);
         when(graph.createEdgeExplorer()).thenReturn(edgeExplorer);
         when(weighting.hasTurnCosts()).thenReturn(false);
-
-        algorithm = new TestAlgorithm(
-                graph,
-                encodingManager,
-                TraversalMode.NODE_BASED,
-                false,
-                weighting,
-                exploreLimit,
-                Comparator.comparingDouble(IsochroneLabel::getWeight));
     }
 
-    @Test
-    void calcPath_throwsIllegalStateException() {
+    @ParameterizedTest
+    @EnumSource(TraversalMode.class)
+    void calcPath_throwsIllegalStateException(TraversalMode traversalMode) {
+        TestAlgorithm algorithm = createAlgorithm(traversalMode);
+
         assertThatThrownBy(() -> algorithm.calcPath(0, 1))
                 .isInstanceOf(IllegalStateException.class)
                 .hasMessage("call search instead");
     }
 
-    @Test
-    void search_withNoEdgesFromRoot() {
+    @ParameterizedTest
+    @EnumSource(TraversalMode.class)
+    void search_withNoEdgesFromRoot(TraversalMode traversalMode) {
         when(edgeExplorer.setBaseNode(1)).thenReturn(edgeIterator);
         when(edgeIterator.next()).thenReturn(false);
 
         List<IsochroneLabel> visited = new ArrayList<>();
+        TestAlgorithm algorithm = createAlgorithm(traversalMode);
         algorithm.search(1, visited::add);
 
         assertThat(visited).hasSize(1);
@@ -96,8 +91,9 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         assertThat(algorithm.getMerges()).isEmpty();
     }
 
-    @Test
-    void search_withOneEdgeWithinLimit() {
+    @ParameterizedTest
+    @EnumSource(TraversalMode.class)
+    void search_withOneEdgeWithinLimit(TraversalMode traversalMode) {
         EdgeIterator emptyIterator = mock(EdgeIterator.class);
         when(edgeExplorer.setBaseNode(1)).thenReturn(edgeIterator);
         when(edgeExplorer.setBaseNode(2)).thenReturn(emptyIterator);
@@ -111,6 +107,7 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         when(exploreLimit.isInLimit(any(IsochroneLabel.class), eq(encodingManager))).thenReturn(true);
 
         List<IsochroneLabel> visited = new ArrayList<>();
+        TestAlgorithm algorithm = createAlgorithm(traversalMode);
         algorithm.search(1, visited::add);
 
         assertThat(visited).hasSize(2);
@@ -130,8 +127,9 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         assertThat(algorithm.getMerges()).isEmpty();
     }
 
-    @Test
-    void search_withEdgeOutOfLimit() {
+    @ParameterizedTest
+    @EnumSource(TraversalMode.class)
+    void search_withEdgeOutOfLimit(TraversalMode traversalMode) {
         when(edgeExplorer.setBaseNode(1)).thenReturn(edgeIterator);
         when(edgeIterator.next()).thenReturn(true, false);
         when(edgeIterator.getEdge()).thenReturn(10);
@@ -142,6 +140,7 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         when(exploreLimit.isInLimit(any(IsochroneLabel.class), eq(encodingManager))).thenReturn(false);
 
         List<IsochroneLabel> visited = new ArrayList<>();
+        TestAlgorithm algorithm = createAlgorithm(traversalMode);
         algorithm.search(1, visited::add);
 
         assertThat(visited).hasSize(1);
@@ -154,8 +153,9 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         assertThat(algorithm.getMerges()).isEmpty();
     }
 
-    @Test
-    void search_stopIfEncounteredEdgeWithInfiniteWeight() {
+    @ParameterizedTest
+    @EnumSource(TraversalMode.class)
+    void search_stopIfEncounteredEdgeWithInfiniteWeight(TraversalMode traversalMode) {
         EdgeIterator emptyIterator = mock(EdgeIterator.class);
         when(edgeExplorer.setBaseNode(1)).thenReturn(edgeIterator);
         when(edgeExplorer.setBaseNode(2)).thenReturn(emptyIterator);
@@ -169,6 +169,7 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         when(exploreLimit.isInLimit(any(IsochroneLabel.class), eq(encodingManager))).thenReturn(true);
 
         List<IsochroneLabel> visited = new ArrayList<>();
+        TestAlgorithm algorithm = createAlgorithm(traversalMode);
         algorithm.search(1, visited::add);
 
         assertThat(visited).hasSize(2);
@@ -189,39 +190,63 @@ class AbstractDijkstraIsochroneAlgorithmTest {
     }
 
     @Test
-    void search_withTwoEdgesToSameNode() {
-        EdgeIterator emptyIterator = mock(EdgeIterator.class);
+    void search_whenSecondPathToNodeIsCheaper_replacesExistingLabelAndMarksItDeleted() {
+        // Graph: root(1) --[20]--> node3, root(1) --[5]--> node2 --[3]--> node3
+        // Node 3 is first reached with weight 20 (direct edge from root).
+        // When processing node 2 (weight 5), a cheaper path to node 3 is found (5+3=8).
+        // This triggers explorePriorityComparator.compare(existing(20), new(8)) > 0 → replace.
+        EdgeIterator edgeIteratorNode2 = mock(EdgeIterator.class);
+        EdgeIterator edgeIteratorNode3 = mock(EdgeIterator.class);
         when(edgeExplorer.setBaseNode(1)).thenReturn(edgeIterator);
-        when(edgeExplorer.setBaseNode(2)).thenReturn(emptyIterator);
+        when(edgeExplorer.setBaseNode(2)).thenReturn(edgeIteratorNode2);
+        when(edgeExplorer.setBaseNode(3)).thenReturn(edgeIteratorNode3);
+
+        // Two edges from root: first to node 3 (heavy, weight 20), then to node 2 (light, weight 5)
+        // getEdge() and getAdjNode() are each called twice per edge: once in accept() / toNode,
+        // and once in toEdge / createTraversalId(), so we need 4 return values for each.
         when(edgeIterator.next()).thenReturn(true, true, false);
-        when(edgeIterator.getEdge()).thenReturn(10, 20);
-        when(edgeIterator.getAdjNode()).thenReturn(2);
-        when(edgeIterator.getDistance()).thenReturn(100.0, 50.0);
-        when(weighting.calcEdgeWeight(edgeIterator, false)).thenReturn(10.0, 20.0);
-        when(weighting.calcEdgeMillis(edgeIterator, false)).thenReturn(1000L, 500L);
-        when(emptyIterator.next()).thenReturn(false);
+        when(edgeIterator.getEdge()).thenReturn(10, 10, 11, 11);
+        when(edgeIterator.getAdjNode()).thenReturn(3, 3, 2, 2);
+        when(edgeIterator.getDistance()).thenReturn(200.0, 50.0);
+        when(weighting.calcEdgeWeight(edgeIterator, false)).thenReturn(20.0, 5.0);
+        when(weighting.calcEdgeMillis(edgeIterator, false)).thenReturn(2000L, 500L);
+
+        // One edge from node 2 to node 3 (weight 3, cumulative 8 — cheaper than the 20 from root)
+        when(edgeIteratorNode2.next()).thenReturn(true, false);
+        when(edgeIteratorNode2.getEdge()).thenReturn(12);
+        when(edgeIteratorNode2.getAdjNode()).thenReturn(3);
+        when(edgeIteratorNode2.getDistance()).thenReturn(30.0);
+        when(weighting.calcEdgeWeight(edgeIteratorNode2, false)).thenReturn(3.0);
+        when(weighting.calcEdgeMillis(edgeIteratorNode2, false)).thenReturn(300L);
+
+        when(edgeIteratorNode3.next()).thenReturn(false);
+
         when(exploreLimit.isInLimit(any(IsochroneLabel.class), eq(encodingManager))).thenReturn(true);
 
         List<IsochroneLabel> visited = new ArrayList<>();
+        TestAlgorithm algorithm = createAlgorithm(TraversalMode.NODE_BASED);
         algorithm.search(1, visited::add);
 
-        assertThat(algorithm.getMerges()).containsExactly("2<-1");
-        assertThat(visited).hasSize(2);
-        IsochroneLabel rootNode = visited.getFirst();
-        assertThat(rootNode.getNode()).isEqualTo(1);
-        assertThat(rootNode.isLeafNode()).isFalse();
+        // All three nodes are visited; the old label(3, w=20) is replaced and marked deleted so
+        // it is skipped when popped from the queue, and the new cheaper label(3, w=8) is enqueued.
+        assertThat(visited).hasSize(3);
+        assertThat(visited.get(0).getNode()).isEqualTo(1);
+        assertThat(visited.get(1).getNode()).isEqualTo(2);
 
-        IsochroneLabel adjacentNode = visited.get(1);
-        assertThat(adjacentNode.getNode()).isEqualTo(2);
-        assertThat(adjacentNode.getWeight()).isEqualTo(10.0);
-        assertThat(adjacentNode.getDistance()).isEqualTo(100);
-        assertThat(adjacentNode.getTime()).isEqualTo(1000L);
-        assertThat(adjacentNode.getParent()).isSameAs(rootNode);
-        assertThat(adjacentNode.isLeafNode()).isFalse();
+        IsochroneLabel node3Label = visited.get(2);
+        assertThat(node3Label.getNode()).isEqualTo(3);
+        assertThat(node3Label.getWeight()).isEqualTo(8.0);
+        assertThat(node3Label.getDistance()).isEqualTo(80.0);
+        assertThat(node3Label.getTime()).isEqualTo(800L);
+        assertThat(node3Label.getParent()).isSameAs(visited.get(1));
+        assertThat(algorithm.getVisitedNodes()).isEqualTo(3);
+
+        assertThat(algorithm.getMerges()).isEmpty();
     }
 
-    @Test
-    void search_whenFromLabelWeightExceedsExistingLabelWeight_replaceOutweighedLabelWithNewLabel() {
+    @ParameterizedTest
+    @EnumSource(TraversalMode.class)
+    void search_mergeEqualWeightedPaths(TraversalMode traversalMode) {
         // node 0 → (10) → node 1 → (20) → node 0
         // When processing node 1 (weight=10): fromLabel.weight(10) > root.weight(0) → replace
         EdgeIterator edgeIteratorNode2 = mock(EdgeIterator.class);
@@ -232,7 +257,7 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         when(edgeIterator.getEdge()).thenReturn(10);
         when(edgeIterator.getAdjNode()).thenReturn(2);
         when(edgeIterator.getDistance()).thenReturn(100.0);
-        when(weighting.calcEdgeWeight(edgeIterator, false)).thenReturn(10.0);
+        when(weighting.calcEdgeWeight(edgeIterator, false)).thenReturn(10.0, 11.0);
         when(weighting.calcEdgeMillis(edgeIterator, false)).thenReturn(1000L);
 
         when(edgeIteratorNode2.next()).thenReturn(true, false);
@@ -243,9 +268,9 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         when(weighting.calcEdgeMillis(edgeIteratorNode2, false)).thenReturn(500L);
 
         when(exploreLimit.isInLimit(any(IsochroneLabel.class), eq(encodingManager))).thenReturn(true);
-        when(exploreLimit.isInLimit(isNull(), eq(encodingManager))).thenReturn(true);
 
         List<IsochroneLabel> visited = new ArrayList<>();
+        TestAlgorithm algorithm = createAlgorithm(traversalMode);
         algorithm.search(1, visited::add);
 
         assertThat(visited).hasSize(2);
@@ -254,10 +279,23 @@ class AbstractDijkstraIsochroneAlgorithmTest {
         assertThat(visited.get(1).getWeight()).isEqualTo(10);
     }
 
+    private TestAlgorithm createAlgorithm(TraversalMode traversalMode) {
+        return new TestAlgorithm(
+                graph,
+                encodingManager,
+                traversalMode,
+                false,
+                weighting,
+                exploreLimit,
+                Comparator.comparingDouble(IsochroneLabel::getWeight));
+    }
+
     @Getter
     static class TestAlgorithm extends AbstractDijkstraIsochroneAlgorithm<IsochroneLabel> {
 
         private final List<String> merges = new ArrayList<>();
+
+        private final List<IsochroneLabel> createdLabels = new ArrayList<>();
 
         TestAlgorithm(
                 Graph graph,
@@ -272,9 +310,17 @@ class AbstractDijkstraIsochroneAlgorithmTest {
 
         @Override
         protected IsochroneLabel createNewIsoLabel(
-                int node, int edge, int edgeKey, IsochroneLabel parent,
-                long time, double distance, double weight, EncodingManager em) {
-            return new IsochroneLabel(node, edge, edgeKey, parent, time, distance, weight);
+                int node,
+                int edge,
+                int edgeKey,
+                IsochroneLabel parent,
+                long time,
+                double distance,
+                double weight,
+                EncodingManager encodingManager) {
+            IsochroneLabel label = new IsochroneLabel(node, edge, edgeKey, parent, time, distance, weight);
+            createdLabels.add(label);
+            return label;
         }
 
         @Override
